# BabylonLivePreviewPlugin

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  package.json
Clients/ts/: README.md  build.mjs  package.json  tsconfig.json
Clients/ts/demo/: bind-check.mjs  client-check.mjs  deltas.mjs  index.html  server.mjs
Clients/ts/src/: LiveSync.ts  NativeHost.ts  SceneApplier.ts  babylon.ts  protocol.ts
Clients/ts/src/entries/: native.ts  web.ts
Clients/ts/src/transports/: NativeSource.ts  Source.ts  WebSocketSource.ts
Dependencies/: CMakeLists.txt
Plugins/Blender/: CMakeLists.txt  README.md  exports.def  exports.macos.txt
Plugins/Blender/addon/babylon_live_preview/: __init__.py  bridge.py  capture.py
Plugins/Blender/src/: dllmain.cpp
Plugins/Blender/tests/: run_bridge.py  run_diag.py  run_env_visual.py  run_format_probe.py  run_gpu_draw.py  run_in_blender.py  run_incremental.py  run_light_material.py  run_pump.py  run_texture.py  run_texture_blender.py  run_texture_channels.py  run_texture_incremental.py
Plugins/Max/: CMakeLists.txt  README.md
Plugins/Max/src/: MaxCapture.cpp  MaxCapture.h  plugin.cpp  plugin_placeholder.cpp
Plugins/Maya/: CMakeLists.txt  README.md  deploy.ps1
Plugins/Maya/src/: MayaCapture.cpp  MayaCapture.h  plugin.cpp  plugin_placeholder.cpp
Plugins/Maya/tests/: mayapy_snapshot.py
Plugins/Omniverse/: Plan.md  README.md
Plugins/Omniverse/usd-bridge/: README.md  bridge.py  gltf_export.py  sample.usda  test_bridge.py  verify.mjs
Plugins/Omniverse/web/: bind-check.mjs  client-check.mjs  deltas.mjs  index.html  server.mjs
Servers/usd-bridge/: README.md  bridge.py  sample.usda  test_bridge.py  verify.mjs
Shared/: CMakeLists.txt
Shared/Scripts/: live_preview.js
Shared/include/BabylonLivePreview/: LivePreview.h  SceneProtocol.h  SceneTranslation.h  c_api.h
Shared/python/: blp_protocol.py
Shared/src/: LivePreview.cpp  Platform_macOS.mm  SceneProtocol.cpp  SceneTranslation.cpp  c_api.cpp  crash_trace.cpp
Tests/headless_render/: CMakeLists.txt  main.cpp
Tests/protocol_scene/: CMakeLists.txt  main.cpp
Tests/translator/: CMakeLists.txt  main.cpp
cmake/: BlpHelpers.cmake
